Updating links and icons structure

--- a/_pages/1.html
+++ b/_pages/1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Britania Road Corridor Improvement</title>
+    <title>1.html</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="/dist/styles.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -24,20 +24,20 @@
                 <span class="halton-callout-box__subtitle">New Service</span>
                 <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                <a href="#" class="btn halton-callout-box__btn">Check it out now</a>
+                <a href="#" class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">Check it out now</a>
             </article>
 
             <img class="halton-callout-box__img" src="/img/Calloutbox.png" alt="Calloutbox message">
         </div>
 
+
         <div class="row">
             <div class="col-md-8 col-sm-8 bx-container">
-                <div class="alert alert-success alert-icon icon-info bottom-section-spacer">
+                <div class="alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer">
                     <h2 class="alert-title component-title section-title">Road Closure: Intersection of Fourth Line and Old Britannia
                         Road</h2>
 
-
-                        <p>The intersection of Fourth Line and Old Britannia Road will be closed starting <strong>June 12,
+                    <p>The intersection of Fourth Line and Old Britannia Road will be closed starting <strong>June 12,
                             2023 at 7
                             p.m.</strong> as part of the Britannia Road Widening project. The intersection is expected
                         to re-open on
@@ -45,7 +45,7 @@
                         Laurent
                         Avenue and James Snow Parkway. Motorists should expect delays when travelling through the area.
                         To learn
-                        more, please read the <a class="text-icon text-icon-after icon-external"
+                        more, please read the <a class="link-icon icon-after icon-external"
                             href="https://mailchi.mp/99418a5da47d/notice-of-construction-pr-street-name-13616383"> May
                             17, 2023
                             notice</a>.</p>
@@ -75,13 +75,13 @@
                     <br><br>
 
                     <div>
-                        <ul class="nav nav-tabs halton-nav-tabs theme2">
+                        <ul class="nav nav-tabs halton-nav-tabs">
                             <li class="active"><a data-toggle="pill" role="tab" href="#home-Phase1">Phase 1</a></li>
                             <li><a data-toggle="pill" role="tab" href="#menu1-Phase2">Phase 2</a></li>
                             <li><a data-toggle="pill" role="tab" href="#menu1-Phase3">Phase 3</a></li>
                         </ul>
 
-                        <div class="tab-content theme2">
+                        <div class="tab-content">
                             <div class="tab-pane fade active in" id="home-Phase1">
                                 <p>Between Tremaine Road and Regional Road 25, complete.</p>
 
@@ -103,31 +103,6 @@
                                         <li>Sound walls</li>
                                     </ul>
                                 </div>
-
-                                <br>
-
-                                <ul class="list-unstyled grid grid-photo-gallery js-photo-gallery">
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 10 - xxl.jpg" data-pswp-width="1024" data-pswp-height="682">
-                                            <img src="/img/image 10.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 11 - xxl.jpg" data-pswp-width="1024" data-pswp-height="684">
-                                            <img src="/img/image 11.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 12 - xxl.jpg" data-pswp-width="1024" data-pswp-height="683">
-                                            <img src="/img/image 12.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 13 - xxl.jpg" data-pswp-width="1024" data-pswp-height="774">
-                                            <img src="/img/image 13.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                </ul>
                             </div>
 
 
@@ -152,31 +127,6 @@
                                         <li>Sound walls</li>
                                     </ul>
                                 </div>
-
-                                <br>
-
-                                <ul class="list-unstyled grid grid-photo-gallery js-photo-gallery">
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 10 - xxl.jpg" data-pswp-width="1024" data-pswp-height="682">
-                                            <img src="/img/image 10.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 11 - xxl.jpg" data-pswp-width="1024" data-pswp-height="684">
-                                            <img src="/img/image 11.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 12 - xxl.jpg" data-pswp-width="1024" data-pswp-height="683">
-                                            <img src="/img/image 12.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 13 - xxl.jpg" data-pswp-width="1024" data-pswp-height="774">
-                                            <img src="/img/image 13.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                </ul>
                             </div>
 
 
@@ -201,31 +151,6 @@
                                         <li>Sound walls</li>
                                     </ul>
                                 </div>
-
-                                <br>
-
-                                <ul class="list-unstyled grid grid-photo-gallery js-photo-gallery">
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 10 - xxl.jpg" data-pswp-width="1024" data-pswp-height="682">
-                                            <img src="/img/image 10.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 11 - xxl.jpg" data-pswp-width="1024" data-pswp-height="684">
-                                            <img src="/img/image 11.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 12 - xxl.jpg" data-pswp-width="1024" data-pswp-height="683">
-                                            <img src="/img/image 12.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                    <li class="grid-item gallery-thumb-wrap">
-                                        <a href="/img/image 13 - xxl.jpg" data-pswp-width="1024" data-pswp-height="774">
-                                            <img src="/img/image 13.png" alt="" class="img-fluid">
-                                        </a>
-                                    </li>
-                                </ul>
                             </div>
                         </div>
                     </div>
@@ -267,7 +192,7 @@
 
 
 
-            <aside class="page-sidebar icon-summary col-sm-3 col-md-3 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 bottom-section-spacer">
+            <aside class="page-sidebar icon-summary icon-big col-sm-3 col-md-3 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 bottom-section-spacer">
                 <h3 class="page-sidebar__title">Project Details</h3>
                 <!-- <div class="callout info"> -->
                 <!-- <button class="btn btn-primary" data-target="#cross" data-toggle="modal" style="margin-left:1em;"
@@ -422,13 +347,13 @@
             <div class="col-md-12">
                 <h2 class="section-title">Timeline</h2>
 
-                <ul class="nav nav-tabs halton-nav-tabs theme2">
+                <ul class="nav nav-tabs halton-nav-tabs">
                     <li class="active"><a data-toggle="pill" href="#home-Timeline1">Phase 1</a></li>
                     <li><a data-toggle="pill" href="#menu-Timeline2">Phase 2</a></li>
                     <li><a data-toggle="pill" href="#menu-Timeline3">Phase 3</a></li>
                 </ul>
 
-                <div class="tab-content theme2">
+                <div class="tab-content">
                     <div class="tab-pane fade active in" id="home-Timeline1">
                         <section class="halton-timeline">
                             <h3 class="component-title">What was accomplished</h3>
@@ -548,11 +473,11 @@
         <div class="row bottom-section-spacer">
             <div class="col-md-9">
                 <h2 class="section-title">Promotion and education</h2>
-                <div class="halton-collapse panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                    <div class="panel panel-default theme2">
+                <div class="halton-collapse panel-group" id="halton-accordion" role="tablist" aria-multiselectable="true">
+                    <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
-                                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
+                                <a role="button" data-toggle="collapse" data-parent="#halton-accordion" href="#collapseOne"
                                     aria-expanded="true" aria-controls="collapseOne">
                                     Promotion and education for diversion
                                 </a>
@@ -571,10 +496,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel panel-default theme2">
+                    <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingTwo">
                             <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#halton-accordion"
                                     href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                     Alternatives to by-law enforcement
                                 </a>
@@ -593,10 +518,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel panel-default theme2">
+                    <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingThree">
                             <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#halton-accordion"
                                     href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                     “Smart City” Technology
                                 </a>
