--- a/_pages/3.html
+++ b/_pages/3.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>..1..</title>
+    <title>3.html</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="/dist/styles.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -36,9 +36,9 @@
                         <li><a href="#03">Meet the Halton Region Small Business Centre team</a></li>
                     </ul>
                 </div>
-                <div class="alert alert-success alert-icon icon-info bottom-section-spacer-sm">
+                <div class="alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer-sm">
                     <p>The Halton Small Business Centre is located at Halton Regional Centre at <a
-                            class="text-icon text-icon-after icon-pin" href="https://goo.gl/maps/5rZH2q9TX1vgK21C7">1151
+                            class="link-icon icon-after icon-pin" href="https://goo.gl/maps/5rZH2q9TX1vgK21C7">1151
                             Bronte
                             Road in Oakville</a>. We are excited to serve you at HRC starting <strong>July 24,
                             2023</strong>.</p>
@@ -48,7 +48,7 @@
 
                     <div class="row rbeh">
                         <div class="col-lg-4 bx-container">
-                            <div class="halton-card card card-icon icon-mail rbeh-item">
+                            <div class="halton-card card card-icon icon-before icon-big icon-mail rbeh-item">
                                 <div class="card-body">
                                     <h3 class="card-title">Online</h3>
                                     <p>
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 bx-container">
-                            <div class="halton-card card card-icon icon-cellphone rbeh-item">
+                            <div class="halton-card card card-icon icon-before icon-big icon-cellphone rbeh-item">
                                 <div class="card-body">
                                     <h3 class="card-title">Call 311</h3>
                                     <p>Call 311 to connect with someone from our team of experts.</p>
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 bx-container">
-                            <div class="halton-card card card-icon icon-mappin rbeh-item">
+                            <div class="halton-card card card-icon icon-before icon-big icon-mapping rbeh-item">
                                 <div class="card-body">
                                     <h3 class="card-title">Visit us</h3>
 
