--- a/_pages/5.html
+++ b/_pages/5.html
@@ -35,13 +35,13 @@
                     <p>Halton is one of the fastest-growing communities in Canada and home to four distinct
                         municipalities:</p>
                     <ul class="list-v-align">
-                        <li><a class="text-icon text-icon-after icon-external" target="_blank"
+                        <li><a class="text-icon icon-after icon-external" target="_blank"
                                 href="https://www.burlington.ca/">The City of Burlington</a></li>
-                        <li><a class="text-icon text-icon-after icon-external" target="_blank"
+                        <li><a class="text-icon icon-after icon-external" target="_blank"
                                 href="http://www.haltonhills.ca/">The Town of Halton Hills</a></li>
-                        <li><a class="text-icon text-icon-after icon-external" target="_blank"
+                        <li><a class="text-icon icon-after icon-external" target="_blank"
                                 href="https://www.milton.ca/">The Town of Milton</a></li>
-                        <li><a class="text-icon text-icon-after icon-external" target="_blank"
+                        <li><a class="text-icon icon-after icon-external" target="_blank"
                                 href="https://www.oakville.ca/">The Town of Oakville</a></li>
                     </ul>
 
@@ -64,7 +64,7 @@
                 </div>
 
 
-                <div class="alert alert-success alert-icon icon-info bottom-section-spacer-sm">
+                <div class="alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer-sm">
                     <h3 class="alert-title component-title section-title">Some of our programs and services include:</h3>
                     <div class="row">
                         <div class="col-md-6">
