--- a/_pages/7.html
+++ b/_pages/7.html
@@ -50,13 +50,13 @@
                         <li>students, adults or seniors living with a low income in Halton</li>
                         <li>individuals receiving assistance from <a
                                 href="/For-Residents/Employment-and-Financial-Assistance/Ontario-Works">Ontario
-                                Works</a> or the <a class="text-icon text-icon-after icon-external"
+                                Works</a> or the <a class="text-icon icon-after icon-external"
                                 href="http://www.mcss.gov.on.ca/en/mcss/programs/social/odsp/">Ontario Disability
                                 Support</a> program</li>
                         <li>government and privately sponsored refugees</li>
-                        <li>registered <a class="text-icon text-icon-after icon-external"
+                        <li>registered <a class="text-icon icon-after icon-external"
                                 href="http://www.haltonhills.ca/transit/">ActiVan</a> or <a
-                                class="text-icon text-icon-after icon-external"
+                                class="text-icon icon-after icon-external"
                                 href="https://www.haltonhills.ca/transit/TaxiScrip.php">Taxi Scrip Program</a> users
                             with a low income living in Halton Hills</li>
                     </ul>
@@ -70,10 +70,10 @@
                         taxes, visit the CRA
                         website:</p>
                     <ul type="disc">
-                        <li><a class="text-icon text-icon-after icon-external"
+                        <li><a class="text-icon icon-after icon-external"
                                 href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/a-copy-your-notice-assessment-reassessment.html"
                                 target="_blank">Notice of assessment: Get a copy</a></li>
-                        <li><a class="text-icon text-icon-after icon-external"
+                        <li><a class="text-icon icon-after icon-external"
                                 href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/doing-your-taxes.html">Doing
                                 your taxes</a></li>
                     </ul>
@@ -197,7 +197,7 @@
                                                     <h4 class="card-title">Burlington</h4>
                                                     <ul class="list-v-align">
                                                         <li>Burlington Transit</li>
-                                                        <li><a class="text-icon text-icon-after icon-pin" href="https://goo.gl/maps/zzPXqV3f19J2">430 John St.</a></li>
+                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/zzPXqV3f19J2">430 John St.</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -208,7 +208,7 @@
                                                     <h4 class="card-title">Milton</h4>
                                                     <ul class="list-v-align">
                                                         <li>Milton Town Hall</li>
-                                                        <li><a class="text-icon text-icon-after icon-pin" href="https://goo.gl/maps/wHB8KdZM39D2">150 Mary St.</a></li>
+                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/wHB8KdZM39D2">150 Mary St.</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -219,7 +219,7 @@
                                                     <h4 class="card-title">Oakville</h4>
                                                     <ul class="list-v-align">
                                                         <li>Oakville Transit</li>
-                                                        <li><a class="text-icon text-icon-after icon-pin" href="https://goo.gl/maps/ZTja849uxM92">430 Wyecroft Rd.</a></li>
+                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/ZTja849uxM92">430 Wyecroft Rd.</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -230,21 +230,21 @@
                                                     <h4 class="card-title">Halton Hills</h4>
                                                     <ul class="list-v-align mb20">
                                                         <li>Hillsview Active Living Centre – Georgetown</li>
-                                                        <li><a class="text-icon text-icon-after icon-pin" href="https://goo.gl/maps/2qGDCzqeM1tMuCAh6">318 Guelph Street, Unit 9</a></li>
+                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/2qGDCzqeM1tMuCAh6">318 Guelph Street, Unit 9</a></li>
                                                         <li>Georgetown</li>
                                                         <li>905-877-6444</li>
                                                     </ul>
 
                                                     <ul class="list-v-align mb20">
                                                         <li>Hillsview Active Living Centre – Acton</li>
-                                                        <li><a class="text-icon text-icon-after icon-pin" href="https://goo.gl/maps/UR3DXgf2wv7PVqWK9">415 Queen Street E., Acton</a></li>
+                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/UR3DXgf2wv7PVqWK9">415 Queen Street E., Acton</a></li>
                                                         <li>Acton</li>
                                                         <li>519-853-5951</li>
                                                     </ul>
 
                                                     <ul class="list-v-align">
                                                         <li>Robert C. Austin Operations Centre (by appointment only)</li>
-                                                        <li><a class="text-icon text-icon-after icon-pin" href="https://goo.gl/maps/ek4DiZombkD2">11620 Trafalgar Road, Georgetown</a></li>
+                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/ek4DiZombkD2">11620 Trafalgar Road, Georgetown</a></li>
                                                         <li>Georgetown</li>
                                                         <li>905-702-6435</li>
                                                     </ul>
