--- a/_pages/8.html
+++ b/_pages/8.html
@@ -82,7 +82,7 @@
             <p>
               <a
                 href="https://www.halton.ca/Repository/2023-2026-Halton-Region-Strategic-Business-Plan"
-                ><b class="text-icon text-icon-before icon-pdf"
+                ><b class="text-icon icon-before icon-pdf"
                   >Read the 2023-2026 Strategic Business Plan</b
                 >
               </a>
@@ -224,7 +224,7 @@
 
       <div class="row marg rbeh bottom-section-spacer">
         <div id="theme1" class="col-lg-6 col-md-6 bx-container">
-          <div class="halton-card card card-icon icon-person rbeh-item">
+          <div class="halton-card card card-icon icon-big icon-person rbeh-item">
             <div class="card-body">
               <h3 class="card-title">Community Well-Being</h3>
 
@@ -262,7 +262,7 @@
         </div>
 
         <div id="theme2" class="col-lg-6 col-md-6 bx-container">
-          <div class="halton-card card card-icon icon-graph-up-arrow rbeh-item">
+          <div class="halton-card card card-icon icon-big icon-graph-up-arrow rbeh-item">
             <div class="card-body">
               <h3 class="card-title">Infrastructure and Growth</h3>
 
@@ -301,7 +301,7 @@
 
         <div id="theme3" class="col-lg-6 col-md-6 bx-container">
           <div
-            class="halton-card card card-icon icon-thermometer-sun rbeh-item"
+            class="halton-card card card-icon icon-big icon-thermometer-sun rbeh-item"
           >
             <div class="card-body">
               <h3 class="card-title">Climate Change and the Environment</h3>
@@ -345,7 +345,7 @@
         <div class="col-lg-6 col-md-6 bx-container">
           <div
             id="theme4"
-            class="halton-card card card-icon icon-award-1 rbeh-item"
+            class="halton-card card card-icon icon-big icon-award-1 rbeh-item"
           >
             <div class="card-body">
               <h3 class="card-title">Excellence in Government</h3>
