--- a/_pages/2.html
+++ b/_pages/2.html
@@ -15,7 +15,7 @@
 
 
 <body>
-    <div class="container-fluid">
+    <div class="halton-features-wrapper container-fluid">
 
         <div class="bottom-section-spacer"></div>
 
