--- a/_pages/7.html
+++ b/_pages/7.html
@@ -15,10 +15,10 @@
 
 
 <body>
-    <div class="container-fluid">
+    <div class="halton-features-wrapper container-fluid">
         <div class="bottom-section-spacer"></div>
 
-        <div class="row halton-features-wrapper">
+        <div class="row">
             <div class="col-md-8 col-sm-8 bx-container">
 
 
