first two sections created

--- a/_pages/10.html
+++ b/_pages/10.html
@@ -23,9 +23,9 @@
   <body>
     <div class="container-fluid bx-container">
       <div class="bottom-section-spacer"></div>
-
+      <!-----------------------section 1---------------->
       <div class="row halton-features-wrapper">
-        <div class="col-md-10 col-sm-10 bx-container">
+        <div class="col-md-12 col-sm-12 bx-container">
           <div
             class="alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer-sm"
           >
@@ -36,6 +36,7 @@
             <ul class="list-v-align">
               <li>
                 <a
+                  target="_blank"
                   class="text-icon icon-after icon-pdf"
                   href="https://www.halton.ca/getmedia/2b4cdedf-de1b-4e14-b13a-a4af0c905495/HE-efax-2023-11-27-Vaccine-Ordering-Deadlines-2024-Schedule.aspx"
                 >
@@ -46,6 +47,7 @@
               </li>
               <li>
                 <a
+                  target="_blank"
                   class="text-icon icon-after icon-pdf"
                   href="https://www.halton.ca/getmedia/d16410e3-efce-43ae-b546-d159888f049b/HE-efax-2023-11-15-increased-influenza-and-covid-19-virus-activity-in-halton.aspx"
                 >
@@ -55,6 +57,7 @@
               </li>
               <li>
                 <a
+                  target="_blank"
                   class="text-icon icon-after icon-pdf"
                   href="https://www.halton.ca/getmedia/9e26ae45-9e3a-4a97-970d-41ef426ee930/HE-efax-2023-10-31-flu-covid-19-rsv-vaccine-updates.aspx"
                 >
@@ -64,6 +67,7 @@
               </li>
               <li>
                 <a
+                  target="_blank"
                   class="text-icon icon-after icon-pdf"
                   href="https://www.halton.ca/getmedia/b525914e-fab3-4bad-a001-cf7169ce0b22/HE-2023-10-16-ON-Health-Memo-Supports-for-the-fall-winter-respiratory-illness-season.aspx"
                 >
@@ -72,24 +76,207 @@
                 </a>
               </li>
             </ul>
+            <div class="bottom-section-spacer-sm"></div>
             <div class="row halton-features-wrapper">
-                <div class="col-md-4 col-sm-4 bx-container">
+              <div class="col-md-3 col-sm-3 bx-container">
+                <a
+                  target="_blank"
+                  class="text-icon icon-after icon-pdf"
+                  href="https://www.halton.ca/For-Business/Information-for-Physicians#signup"
+                >
+                  <b> See Past Updates</b>
+                </a>
+              </div>
+              <div class="col-md-4 col-sm-4 bx-container">
+                <a
+                  target="_blank"
+                  class="text-icon icon-after icon-pdf"
+                  href="https://www.halton.ca/For-Business/Information-for-Physicians#signup"
+                >
+                  <b> Signup For Physician Email Updates</b>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-----------------------section 2---------------->
+      <div class="row halton-features-wrapper">
+        <div class="col-md-12 col-sm-12 bx-container">
+          <div
+            class="alert alert-info alert-icon icon-before icon-big icon-info bottom-section-spacer-sm"
+          >
+            <h2 class="alert-title component-title section-title">
+              COVID-19 Physician Information
+            </h2>
+            <div class="row halton-features-wrapper">
+              <!---------------------------s1---------------------------------->
+              <div class="col-md-6 col-sm-6 bx-container">
+                <h3 class="alert-title component-title section-title">
+                  Guidance Documents and Resources
+                </h3>
+                <ul class="list-v-align">
+                  <li>
                     <a
-                  class="text-icon icon-after icon-pdf"
-                  href="https://www.halton.ca/For-Business/Information-for-Physicians#signup"
-                >
-                  See Past Updates
-                </a>
-                    </div>
-                    <div class="col-md-4 col-sm-4 bx-container">
-                        <a
-                  class="text-icon icon-after icon-pdf"
-                  href="https://www.halton.ca/For-Business/Information-for-Physicians#signup"
-                >
-                  Signup For Physician Email Updates
-                </a>
-                    </div>
-                    </div>
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://www.health.gov.on.ca/en/pro/programs/publichealth/coronavirus/2019_guidance.aspx"
+                    >
+                      COVID-19 Guidance for the Health Sector, Ministry of
+                      Health
+                    </a>
+                  </li>
+
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://hfam.ca/clinical-pathways-and-evidence/"
+                    >
+                      COVID pathways, evidence and practical supports, Hamilton
+                      Family Medicine
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://covid-19.ontario.ca/assessment-centre-locations"
+                    >
+                      COVID-19 testing in Halton, Ministry of Health
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      class="text-icon icon-after icon-pdf"
+                      href="https://forms.office.com/pages/responsepage.aspx?id=KRLczSqsl0u3ig5crLWGXKXzpSG50klPsPpJe32pqLJUODU3OUNCQUZaT1BVMDNVMlVZR001WDZNWi4u"
+                    >
+                      Critical PPE and Swab Kits, Ministry of Health
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://www.ontariofamilyphysicians.ca/tools-resources/covid-19-resources"
+                    >
+                      COVID-19 resources for family physicians
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <!---------------------------s2---------------------------------->
+
+              <!-- <div class="bottom-section-spacer-sm"></div> -->
+              <div class="col-md-6 col-sm-6 bx-container">
+                <h3 class="alert-title component-title section-title">
+                  COVID-19 Antiviral Treatment
+                </h3>
+
+                <ul class="list-v-align">
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://www.ontariohealth.ca/providing-health-care/clinical-resources-education/covid-19/treatment"
+                    >
+                      COVID-19 Treatment, Ontario Health
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://covid-19.ontario.ca/covid-19-treatments"
+                    >
+                      COVID-19 testing and treatment
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://www.ontariohealth.ca/sites/ontariohealth/files/Access_to_antiviral_treatments_for_COVID-19_in_the_community.pdf"
+                      class="link-icon icon-after icon-external"
+                    >
+                      Access to antiviral treatments for COVID-19 in the
+                      community
+                    </a>
+                    <a
+                      target="_blank"
+                      href="https://www.ontariohealth.ca/sites/ontariohealth/files/Access_to_antiviral_treatments_for_COVID-19_in_the_community.pdf"
+                      class="link-icon icon-after icon-pdf"
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://covid-vaccine.canada.ca/info/paxlovid-en.html"
+                    >
+                      COVID-19 Paxlovid drug information, Health Canada
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://www.ontariohealth.ca/sites/ontariohealth/files/Ontario%20Health%20Recommendations%20-%20Outpatient%20Use%20of%20Intravenous%20Remdesivir%20%28Veklury%29%20in%20Adults.pdf"
+                    >
+                      Ontario Health Recommendations for Outpatient Use of
+                      Intravenous Remdesivir (Veklury) in Adults
+                    </a>
+                    <a
+                      target="_blank"
+                      class="text-icon icon-after icon-pdf"
+                      href="https://www.ontariohealth.ca/sites/ontariohealth/files/Ontario%20Health%20Recommendations%20-%20Outpatient%20Use%20of%20Intravenous%20Remdesivir%20%28Veklury%29%20in%20Adults.pdf"
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://covid19-sciencetable.ca/sciencebrief/clinical-practice-guideline-summary-recommended-drugs-and-biologics-in-adult-patients-with-covid-19-version-11-0/"
+                    >
+                      Clinical Guidance Guideline Summary: Recommended Drugs and
+                      Biologics in Adult Patients with COVID-19, COVID-19
+                      Science Advisory Table for Ontario
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://tools.cep.health/tool/covid-19/"
+                    >
+                      COVID-19: Clinical Guidance for Primary Care Providers,
+                      Centre for Effective Practice
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://uwaterloo.ca/pharmacy/resources-services-and-initiatives/health-resources/covid-19-health-resources"
+                    >
+                      COVID-19 treatment resources, University of Waterloo
+                      School of Pharmacy
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      href="https://ehealthce.ca/COVID-Therapeutics.htm"
+                    >
+                      Paxlovid prescription form, eHealth Centre of Excellence
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
