link reference corrected.

--- a/_pages/10.html
+++ b/_pages/10.html
@@ -90,11 +90,7 @@
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-4 bx-container">
-                  <a
-                    target="_blank"
-                    class="text-icon icon-after icon-pdf"
-                    href="https://www.halton.ca/For-Business/Information-for-Physicians#signup"
-                  >
+                  <a class="text-icon icon-after icon-pdf" href="#1">
                     <b> Signup For Physician Email Updates</b>
                   </a>
                 </div>
@@ -174,7 +170,6 @@
 
                 <!---------------------------s2---------------------------------->
 
-                <!-- <div class="bottom-section-spacer-sm"></div> -->
                 <div class="col-md-6 col-sm-12 bx-container">
                   <h3 class="alert-title component-title section-title">
                     COVID-19 Antiviral Treatment
@@ -288,7 +283,7 @@
       </div>
       <!-------------------------------------------------------------->
       <!-----------------------section 3---------------->
-      <div class="row halton-features-wrapper">
+      <div id="1" class="row halton-features-wrapper">
         <div class="col-md-8 col-sm-8 bx-container">
           <div
             class="alert alert-success alert-icon icon-before icon-big icon-mail bottom-section-spacer-sm"
@@ -305,7 +300,6 @@
               <!------------form-->
               <div class="row">
                 <div class="col-md-12 col-sm-12 bx-container">
-                  <!-- <div class="bottom-section-spacer-sm"> -->
                   <div class="mb10">
                     <label for="firstName" class="form-label">First Name</label>
                     <input
@@ -334,7 +328,6 @@
                     />
                   </div>
                 </div>
-                <!-- </div> -->
                 <div class="col-xs-6 col-xl-3 col-lg-3 col-md-3 col-sm-6">
                   <button
                     type="button"
